[gd_scene load_steps=48 format=3 uid="uid://bqbskrps135pl"]

[ext_resource type="Texture2D" uid="uid://bk01td3kflste" path="res://Menus/MainMenuAssets/Sprites/Logo2.png" id="1_34c5t"]
[ext_resource type="Script" path="res://Menus/MainMenuAssets/MainMenu.gd" id="1_u8sjh"]
[ext_resource type="Texture2D" uid="uid://0huhc5u7uhmw" path="res://Menus/MainMenuAssets/Sprites/Logo3.png" id="2_04x5u"]
[ext_resource type="AudioStream" uid="uid://ci36j6musp6d7" path="res://Sound Library/Menus/AMBTran_Underground Station Ambience, Knightsbridge,_JF_Train Station Atmos.ogg" id="2_11fwi"]
[ext_resource type="Texture2D" uid="uid://0hpekreoh12a" path="res://Menus/MainMenuAssets/Sprites/Logo4.png" id="3_ma2sj"]
[ext_resource type="AudioStream" uid="uid://d1jvbytt3aesl" path="res://Sound Library/Menus/bulletTrainReverse.ogg" id="3_sfx77"]
[ext_resource type="Texture2D" uid="uid://0gs5mwsd8bhm" path="res://Menus/MainMenuAssets/Sprites/Logo1.png" id="4_c0nb0"]
[ext_resource type="AudioStream" uid="uid://mypukptconbt" path="res://Sound Library/Menus/SonarPing.wav" id="4_lcmde"]
[ext_resource type="Texture2D" uid="uid://fn8hdlllwa7d" path="res://white square.png" id="5_3aaii"]
[ext_resource type="AudioStream" uid="uid://tavl4h2l5huq" path="res://Sound Library/Menus/TVScan.wav" id="5_tfsqh"]
[ext_resource type="Shader" path="res://UI/scrollTex.gdshader" id="6_ufsas"]
[ext_resource type="Texture2D" uid="uid://dilp8tc1gtgh3" path="res://UI/Graphics/ActionBars1.png" id="7_a4m16"]
[ext_resource type="Texture2D" uid="uid://de3patqmibiiw" path="res://UI/Graphics/ActionBars2.png" id="8_6v7uq"]
[ext_resource type="Texture2D" uid="uid://bjwtcumoa6h8g" path="res://Menus/MainMenuAssets/Sprites/muh.png" id="9_7p3sx"]
[ext_resource type="Shader" path="res://ShadersLibrary/FadeOnEdgesOfScreen.gdshader" id="10_a3gsu"]
[ext_resource type="Texture2D" uid="uid://brdm5ujkcaq48" path="res://Menus/MainMenuAssets/Sprites/Stars1.png" id="11_av7fh"]
[ext_resource type="Texture2D" uid="uid://djm3ldeu3a7tq" path="res://Menus/MainMenuAssets/Sprites/Stars2.png" id="12_g78p7"]
[ext_resource type="Texture2D" uid="uid://cn7o66n4w60ko" path="res://Menus/MainMenuAssets/Sprites/Stars4.png" id="13_1wii7"]
[ext_resource type="Texture2D" uid="uid://bhf8mer2m1tm0" path="res://Menus/MainMenuAssets/Sprites/Stars5.png" id="14_b07ld"]
[ext_resource type="Texture2D" uid="uid://c86h835hks0nn" path="res://Menus/MainMenuAssets/Sprites/Stars6.png" id="15_uatug"]
[ext_resource type="Shader" path="res://ShadersLibrary/GlitchFFX.gdshader" id="17_lp0xi"]
[ext_resource type="Texture2D" uid="uid://7bu1mksp3xfh" path="res://PixelTextureGrid_256.png" id="18_47y0h"]
[ext_resource type="Texture2D" uid="uid://bkildo2eaewei" path="res://Menus/MainMenuAssets/Sprites/Back.png" id="23_kywmp"]
[ext_resource type="PackedScene" uid="uid://dvo5mx5g26ica" path="res://Menus/MainMenuAssets/MenuButton.tscn" id="23_nc3gl"]
[ext_resource type="Texture2D" uid="uid://bkajqdyhwtg7h" path="res://Menus/MainMenuAssets/Sprites/xButton.png" id="24_3k1d5"]
[ext_resource type="PackedScene" uid="uid://xl47c7rywuwc" path="res://Menus/MainMenuAssets/LevelSelect.tscn" id="24_frpnq"]
[ext_resource type="Script" path="res://Menus/MainMenuAssets/MenuButton.gd" id="25_pllh6"]
[ext_resource type="Texture2D" uid="uid://doupri6xdni5" path="res://UI/Graphics/dinkleberg.jpg" id="26_rvu1k"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_28w3j"]
shader = ExtResource("6_ufsas")
shader_parameter/offset = Vector2(5.51, 0)
shader_parameter/modulate = Color(0.254053, 0.243068, 0.230383, 0.196078)
shader_parameter/autoTimeScroll = Vector2(0.3, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8ohd3"]
shader = ExtResource("6_ufsas")
shader_parameter/offset = Vector2(5.51, 0)
shader_parameter/modulate = Color(0.254902, 0.243137, 0.231373, 0.196078)
shader_parameter/autoTimeScroll = Vector2(-1, 0)

[sub_resource type="SpriteFrames" id="SpriteFrames_nn882"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_34c5t")
}, {
"duration": 1.0,
"texture": ExtResource("2_04x5u")
}, {
"duration": 1.0,
"texture": ExtResource("3_ma2sj")
}, {
"duration": 1.0,
"texture": ExtResource("4_c0nb0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5kah0"]
shader = ExtResource("10_a3gsu")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ko6mu"]
shader = ExtResource("10_a3gsu")

[sub_resource type="Gradient" id="Gradient_rm36g"]
offsets = PackedFloat32Array(0, 0.752747, 1)
colors = PackedColorArray(0.226264, 0.333626, 0.336955, 1, 0.117892, 0.186092, 0.188222, 1, 0.1197, 0.187657, 0.19, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3uaxh"]
gradient = SubResource("Gradient_rm36g")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ueanv"]
shader = ExtResource("17_lp0xi")
shader_parameter/AreaShape = Vector2(0, 0)
shader_parameter/IntensityCap = 1.0
shader_parameter/FinalIntensityMultiplier = 0.06
shader_parameter/GlitchDistance = 0.015
shader_parameter/RedTakeOffset = Vector2(1, 0.05)
shader_parameter/GreenTakeOffset = Vector2(-1, 0)
shader_parameter/BlueTakeOffset = Vector2(0, 0.2)
shader_parameter/noiseAngle = 0.0
shader_parameter/pushAngle = 0.0
shader_parameter/sampleScale = 0.13
shader_parameter/noiseScale = 0.545
shader_parameter/noiseIntensity = 100.0
shader_parameter/realTimeScale = 10.0
shader_parameter/currentTime = 0.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eco36"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_thxl2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_86ctq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_skl2v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n0107"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_78126"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qes8k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3e436"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i50u5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_go0lw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8flyf"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_u8sjh")
finalVisualFlairModulate = Color(0.619608, 0.431373, 1, 0.196078)

[node name="Sounds" type="Node" parent="."]

[node name="AmbTranUndergroundStationAmbience,Knightsbridge,JfTrainStationAtmos" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("2_11fwi")
volume_db = -8.419
pitch_scale = 0.3
autoplay = true

[node name="wooshBuildup" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("3_sfx77")
volume_db = -80.0

[node name="Ping" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("4_lcmde")
pitch_scale = 0.77

[node name="Static" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("5_tfsqh")
volume_db = -15.352
pitch_scale = 1.49

[node name="Splashes" type="Node2D" parent="."]

[node name="Muh" type="Sprite2D" parent="Splashes"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
z_index = 4096
texture_filter = 1
position = Vector2(398, 236)
texture = ExtResource("9_7p3sx")

[node name="Main elements" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="VFlair" type="Node2D" parent="Main elements"]
unique_name_in_owner = true

[node name="VisualFlair" type="Control" parent="Main elements/VFlair"]
z_index = -4000
texture_filter = 1
material = SubResource("ShaderMaterial_28w3j")
layout_mode = 3
anchors_preset = 0
pivot_offset = Vector2(400, 250)
metadata/_edit_lock_ = true

[node name="ActionBar2" type="TextureRect" parent="Main elements/VFlair/VisualFlair"]
texture_repeat = 2
use_parent_material = true
layout_mode = 0
offset_left = 1925.0
offset_top = 381.0
offset_right = 3973.0
offset_bottom = 445.0
rotation = -3.21749
texture = ExtResource("7_a4m16")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="ActionBar3" type="TextureRect" parent="Main elements/VFlair/VisualFlair"]
texture_repeat = 2
use_parent_material = true
layout_mode = 0
offset_left = 730.0
offset_top = -301.0
offset_right = 2778.0
offset_bottom = -237.0
rotation = -4.82677
scale = Vector2(0.85, 1)
texture = ExtResource("8_6v7uq")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="VisualFlair2" type="Control" parent="Main elements/VFlair"]
z_index = -4000
texture_filter = 1
material = SubResource("ShaderMaterial_8ohd3")
layout_mode = 3
anchors_preset = 0
pivot_offset = Vector2(400, 250)
metadata/_edit_lock_ = true

[node name="ActionBar3" type="TextureRect" parent="Main elements/VFlair/VisualFlair2"]
texture_repeat = 2
use_parent_material = true
layout_mode = 0
offset_left = 663.0
offset_top = -310.0
offset_right = 2711.0
offset_bottom = -246.0
rotation = -4.77664
scale = Vector2(0.85, 1)
texture = ExtResource("8_6v7uq")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="LogoAnchor" type="Node2D" parent="Main elements"]
unique_name_in_owner = true
position = Vector2(129, 100)

[node name="Logo" type="AnimatedSprite2D" parent="Main elements/LogoAnchor"]
unique_name_in_owner = true
z_index = 4096
texture_filter = 1
position = Vector2(100, 1)
sprite_frames = SubResource("SpriteFrames_nn882")

[node name="AllStars" type="Node2D" parent="."]
z_index = -2000

[node name="Stars1" type="CPUParticles2D" parent="AllStars"]
z_index = 4096
texture_filter = 1
material = SubResource("ShaderMaterial_5kah0")
position = Vector2(-536, -66)
scale = Vector2(100, 100)
amount = 10
lifetime = 15.0
preprocess = 100.0
speed_scale = 0.3
texture = ExtResource("11_av7fh")
emission_shape = 3
emission_rect_extents = Vector2(5, 5)
direction = Vector2(1, 0.2)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 2.0
initial_velocity_max = 2.0
scale_amount_min = 0.7
scale_amount_max = 0.7
anim_offset_max = 1.0

[node name="Stars2" type="CPUParticles2D" parent="AllStars"]
z_index = 4096
texture_filter = 1
material = SubResource("ShaderMaterial_5kah0")
position = Vector2(-536, -66)
scale = Vector2(100, 100)
amount = 10
lifetime = 15.0
preprocess = 100.0
speed_scale = 0.3
texture = ExtResource("12_g78p7")
emission_shape = 3
emission_rect_extents = Vector2(5, 5)
direction = Vector2(1, 0.2)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 2.0
initial_velocity_max = 2.0
scale_amount_min = 0.7
scale_amount_max = 0.7
anim_offset_max = 1.0

[node name="Stars3" type="CPUParticles2D" parent="AllStars"]
z_index = 4096
texture_filter = 1
material = SubResource("ShaderMaterial_5kah0")
position = Vector2(-536, -66)
scale = Vector2(100, 100)
amount = 10
lifetime = 15.0
preprocess = 100.0
speed_scale = 0.3
texture = ExtResource("13_1wii7")
emission_shape = 3
emission_rect_extents = Vector2(5, 5)
direction = Vector2(1, 0.2)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 2.0
initial_velocity_max = 2.0
scale_amount_min = 0.7
scale_amount_max = 0.7
anim_offset_max = 1.0

[node name="Stars4" type="CPUParticles2D" parent="AllStars"]
z_index = 4096
texture_filter = 1
material = SubResource("ShaderMaterial_5kah0")
position = Vector2(-536, -66)
scale = Vector2(100, 100)
amount = 10
lifetime = 15.0
preprocess = 100.0
speed_scale = 0.3
texture = ExtResource("14_b07ld")
emission_shape = 3
emission_rect_extents = Vector2(5, 5)
direction = Vector2(1, 0.2)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 2.0
initial_velocity_max = 2.0
scale_amount_min = 0.7
scale_amount_max = 0.7
anim_offset_max = 1.0

[node name="Stars5" type="CPUParticles2D" parent="AllStars"]
z_index = 4096
texture_filter = 1
material = SubResource("ShaderMaterial_5kah0")
position = Vector2(-536, -66)
scale = Vector2(100, 100)
amount = 10
lifetime = 15.0
preprocess = 100.0
speed_scale = 0.3
texture = ExtResource("15_uatug")
emission_shape = 3
emission_rect_extents = Vector2(5, 5)
direction = Vector2(1, 0.2)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 2.0
initial_velocity_max = 2.0
scale_amount_min = 0.7
scale_amount_max = 0.7
anim_offset_max = 1.0

[node name="ground" type="Sprite2D" parent="AllStars"]
unique_name_in_owner = true
visible = false
z_index = -2030
material = SubResource("ShaderMaterial_ko6mu")
position = Vector2(428, 376)
rotation = -1.5708
scale = Vector2(1, 1000)
texture = SubResource("GradientTexture1D_3uaxh")

[node name="Back" type="Sprite2D" parent="."]
modulate = Color(0.0295066, 0.0295066, 0.0295066, 1)
z_index = -4096
position = Vector2(876, 554)
scale = Vector2(100, 100)
texture = ExtResource("5_3aaii")
metadata/_edit_lock_ = true

[node name="BlurFFX" type="Sprite2D" parent="."]
unique_name_in_owner = true
z_index = 4096
material = SubResource("ShaderMaterial_ueanv")
position = Vector2(382, 233)
scale = Vector2(4, 4)
texture = ExtResource("18_47y0h")

[node name="Buttons" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="OptionsMenu" type="Control" parent="Buttons"]
unique_name_in_owner = true
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Back2" type="NinePatchRect" parent="Buttons/OptionsMenu"]
layout_mode = 0
offset_left = 127.0
offset_top = 172.0
offset_right = 577.0
offset_bottom = 332.0
texture = ExtResource("23_kywmp")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Close" type="Button" parent="Buttons/OptionsMenu"]
layout_mode = 0
offset_left = 555.0
offset_top = 162.0
offset_right = 587.0
offset_bottom = 194.0
theme_override_colors/icon_pressed_color = Color(0.61339, 0.61339, 0.61339, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_eco36")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_thxl2")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_86ctq")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_skl2v")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_n0107")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_78126")
theme_override_styles/hover = SubResource("StyleBoxEmpty_qes8k")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_3e436")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_i50u5")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_go0lw")
theme_override_styles/normal = SubResource("StyleBoxEmpty_8flyf")
icon = ExtResource("24_3k1d5")
script = ExtResource("25_pllh6")
buttonType = 4

[node name="TextureRect" type="TextureRect" parent="Buttons/OptionsMenu"]
layout_mode = 0
offset_left = 423.0
offset_top = 189.0
offset_right = 723.0
offset_bottom = 607.0
scale = Vector2(0.3, 0.3)
texture = ExtResource("26_rvu1k")
expand_mode = 1

[node name="Delete button" type="Button" parent="Buttons/OptionsMenu"]
layout_mode = 0
offset_left = 147.0
offset_top = 226.0
offset_right = 325.0
offset_bottom = 270.0
text = "Shift + Click: Delete Data"
script = ExtResource("25_pllh6")
buttonType = 7

[node name="LevelSelect" parent="Buttons" instance=ExtResource("24_frpnq")]
unique_name_in_owner = true
visible = false
z_index = 2
offset_left = 50.0
offset_top = 159.0
offset_right = 50.0
offset_bottom = 159.0

[node name="Training" parent="Buttons/LevelSelect" index="2"]
buttonArgument = "TrainingLevel"

[node name="ShortTrial" parent="Buttons/LevelSelect" index="3"]
buttonArgument = "ShortTrial"

[node name="MainButtons" type="Control" parent="Buttons"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="QuitButton" parent="Buttons/MainButtons" instance=ExtResource("23_nc3gl")]
offset_left = 200.0
offset_top = 336.0
offset_right = 200.0
offset_bottom = 336.0

[node name="Text" parent="Buttons/MainButtons/QuitButton" index="1"]
text = "Quit
"

[node name="Options" parent="Buttons/MainButtons" instance=ExtResource("23_nc3gl")]
offset_left = 175.0
offset_top = 286.0
offset_right = 175.0
offset_bottom = 286.0
buttonType = 2

[node name="Text" parent="Buttons/MainButtons/Options" index="1"]
text = "Options
"

[node name="Play" parent="Buttons/MainButtons" instance=ExtResource("23_nc3gl")]
offset_left = 150.0
offset_top = 236.0
offset_right = 150.0
offset_bottom = 236.0
buttonType = 3

[node name="Text" parent="Buttons/MainButtons/Play" index="1"]
text = "Play
"

[editable path="Buttons/LevelSelect"]
[editable path="Buttons/LevelSelect/Training"]
[editable path="Buttons/LevelSelect/ShortTrial"]
[editable path="Buttons/LevelSelect/LongTrial"]
[editable path="Buttons/LevelSelect/Start"]
[editable path="Buttons/MainButtons/QuitButton"]
[editable path="Buttons/MainButtons/Options"]
[editable path="Buttons/MainButtons/Play"]
